# discord-bot

./: .env.example  .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix
.github/ISSUE_TEMPLATE/: improve-feature-or-command.md  improve-something.md  request-command.md  request-something.md
migrations/: 20240302033643_infractions.sql  20240303222427_user_infractions.sql  20240321223923_tags.sql  20240527114438_animals.sql  20240527114911_bang_points.sql  20240626035337_tags.sql
src/: builders.rs  commands.rs  database.rs  errors.rs  main.rs  models.rs  translation.rs  utils.rs
src/builders/: create_tag.rs
src/commands/: animal.rs  bang.rs  emoji.rs  emojis.rs  infractions.rs  misc.rs  moderation.rs  sticker.rs  stickers.rs  tags.rs  utility.rs
src/commands/moderation/: ban.rs  kick.rs
src/errors/: argument_parse.rs
src/models/: tag.rs
translations/: en-US.ftl  pt-BR.ftl
