[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
poise = "0.6.1"
regex = "1.10.5"
serenity = { version = "0.12.2", features = ["client", "gateway", "rustls_backend", "cache", "model"] }
sqlx = { version = "0.7.4", features = ["postgres", "chrono", "runtime-async-std", "tls-rustls"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
